gensrc/dshell/internal/parser/dshellParser.java
// Generated from dshell.g4 by ANTLR 4.2

package dshell.internal.parser;
import dshell.internal.parser.TypePool;
import dshell.internal.parser.Node;
import dshell.internal.parser.NodeUtils;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class dshellParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__13=1, T__12=2, T__11=3, T__10=4, T__9=5, T__8=6, T__7=7, T__6=8, T__5=9, 
		T__4=10, T__3=11, T__2=12, T__1=13, T__0=14, Assert=15, Break=16, Boolean=17, 
		Catch=18, Continue=19, Class=20, Command=21, Constructor=22, Do=23, Else=24, 
		Extends=25, Export=26, Function=27, Finally=28, Float=29, For=30, If=31, 
		Import=32, In=33, Int=34, Instanceof=35, Let=36, New=37, Null=38, Return=39, 
		Super=40, Try=41, This=42, Throw=43, Var=44, Void=45, While=46, ADD=47, 
		SUB=48, MUL=49, DIV=50, MOD=51, LT=52, GT=53, LE=54, GE=55, EQ=56, NE=57, 
		AND=58, OR=59, XOR=60, COND_AND=61, COND_OR=62, PLUS=63, MINUS=64, BIT_NOT=65, 
		NOT=66, INC=67, DEC=68, ASSIGN=69, ADD_ASSIGN=70, SUB_ASSIGN=71, MUL_ASSIGN=72, 
		DIV_ASSIGN=73, MOD_ASSIGN=74, IntLiteral=75, FloatLiteral=76, BooleanLiteral=77, 
		StringLiteral=78, NullLiteral=79, SymbolName=80, ClassName=81, CommandName=82, 
		StmtEnd=83, Comment=84, WhileSpace=85;
	public static final String[] tokenNames = {
		"<INVALID>", "'Map'", "'env'", "':'", "'['", "';'", "'{'", "']'", "'}'", 
		"'[]'", "'('", "')'", "'Func'", "','", "'.'", "'assert'", "'break'", "'boolean'", 
		"'catch'", "'continue'", "'class'", "'command'", "'constructor'", "'do'", 
		"'else'", "'extends'", "'export'", "'function'", "'finally'", "'float'", 
		"'for'", "'if'", "'import'", "'in'", "'int'", "'instanceof'", "'let'", 
		"'new'", "Null", "'return'", "'super'", "'try'", "'this'", "'throw'", 
		"'var'", "'void'", "'while'", "ADD", "SUB", "'*'", "'/'", "'%'", "'<'", 
		"'>'", "'<='", "'>='", "'=='", "'!='", "'&'", "'|'", "'^'", "'&&'", "'||'", 
		"PLUS", "MINUS", "'~'", "'!'", "'++'", "'--'", "'='", "'+='", "'-='", 
		"'*='", "'/='", "'%='", "IntLiteral", "FloatLiteral", "BooleanLiteral", 
		"StringLiteral", "NullLiteral", "SymbolName", "ClassName", "CommandName", 
		"StmtEnd", "Comment", "WhileSpace"
	};
	public static final int
		RULE_toplevel = 0, RULE_toplevelStatements = 1, RULE_toplevelStatement = 2, 
		RULE_functionDeclaration = 3, RULE_argumentsDeclaration = 4, RULE_variableDeclarationWithType = 5, 
		RULE_typeName = 6, RULE_block = 7, RULE_blockStatement = 8, RULE_classDeclaration = 9, 
		RULE_classBlock = 10, RULE_classElement = 11, RULE_fieldDeclaration = 12, 
		RULE_constructorDeclaration = 13, RULE_statement = 14, RULE_assertStatement = 15, 
		RULE_breakStatement = 16, RULE_continueStatement = 17, RULE_exportEnvStatement = 18, 
		RULE_forStatement = 19, RULE_forInit = 20, RULE_forCond = 21, RULE_forIter = 22, 
		RULE_foreachStatement = 23, RULE_ifStatement = 24, RULE_importEnvStatement = 25, 
		RULE_importCommandStatement = 26, RULE_returnStatement = 27, RULE_throwStatement = 28, 
		RULE_whileStatement = 29, RULE_tryCatchStatement = 30, RULE_finallyBlock = 31, 
		RULE_catchStatement = 32, RULE_exceptDeclaration = 33, RULE_variableDeclaration = 34, 
		RULE_assignStatement = 35, RULE_expression = 36, RULE_symbol = 37, RULE_literal = 38, 
		RULE_arrayLiteral = 39, RULE_mapLiteral = 40, RULE_mapEntry = 41, RULE_arguments = 42, 
		RULE_argument = 43;
	public static final String[] ruleNames = {
		"toplevel", "toplevelStatements", "toplevelStatement", "functionDeclaration", 
		"argumentsDeclaration", "variableDeclarationWithType", "typeName", "block", 
		"blockStatement", "classDeclaration", "classBlock", "classElement", "fieldDeclaration", 
		"constructorDeclaration", "statement", "assertStatement", "breakStatement", 
		"continueStatement", "exportEnvStatement", "forStatement", "forInit", 
		"forCond", "forIter", "foreachStatement", "ifStatement", "importEnvStatement", 
		"importCommandStatement", "returnStatement", "throwStatement", "whileStatement", 
		"tryCatchStatement", "finallyBlock", "catchStatement", "exceptDeclaration", 
		"variableDeclaration", "assignStatement", "expression", "symbol", "literal", 
		"arrayLiteral", "mapLiteral", "mapEntry", "arguments", "argument"
	};

	@Override
	public String getGrammarFileName() { return "dshell.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public dshellParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ToplevelContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(dshellParser.EOF, 0); }
		public ToplevelStatementsContext toplevelStatements() {
			return getRuleContext(ToplevelStatementsContext.class,0);
		}
		public ToplevelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toplevel; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dshellVisitor ) return ((dshellVisitor<? extends T>)visitor).visitToplevel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ToplevelContext toplevel() throws RecognitionException {
		ToplevelContext _localctx = new ToplevelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_toplevel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 6) | (1L << 10) | (1L << Assert) | (1L << Break) | (1L << Continue) | (1L << Class) | (1L << Export) | (1L << Function) | (1L << For) | (1L << If) | (1L << Import) | (1L << Let) | (1L << New) | (1L << Return) | (1L << Try) | (1L << Throw) | (1L << Var) | (1L << While) | (1L << PLUS))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (MINUS - 64)) | (1L << (BIT_NOT - 64)) | (1L << (NOT - 64)) | (1L << (IntLiteral - 64)) | (1L << (FloatLiteral - 64)) | (1L << (BooleanLiteral - 64)) | (1L << (StringLiteral - 64)) | (1L << (NullLiteral - 64)) | (1L << (SymbolName - 64)))) != 0)) {
				{
				setState(88); toplevelStatements();
				}
			}

			setState(91); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToplevelStatementsContext extends ParserRuleContext {
		public List<TerminalNode> StmtEnd() { return getTokens(dshellParser.StmtEnd); }
		public TerminalNode StmtEnd(int i) {
			return getToken(dshellParser.StmtEnd, i);
		}
		public List<ToplevelStatementContext> toplevelStatement() {
			return getRuleContexts(ToplevelStatementContext.class);
		}
		public ToplevelStatementContext toplevelStatement(int i) {
			return getRuleContext(ToplevelStatementContext.class,i);
		}
		public ToplevelStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toplevelStatements; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dshellVisitor ) return ((dshellVisitor<? extends T>)visitor).visitToplevelStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ToplevelStatementsContext toplevelStatements() throws RecognitionException {
		ToplevelStatementsContext _localctx = new ToplevelStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_toplevelStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); toplevelStatement();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==StmtEnd) {
				{
				{
				setState(94); match(StmtEnd);
				setState(95); toplevelStatement();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToplevelStatementContext extends ParserRuleContext {
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ToplevelStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toplevelStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dshellVisitor ) return ((dshellVisitor<? extends T>)visitor).visitToplevelStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ToplevelStatementContext toplevelStatement() throws RecognitionException {
		ToplevelStatementContext _localctx = new ToplevelStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_toplevelStatement);
		try {
			setState(104);
			switch (_input.LA(1)) {
			case Function:
				enterOuterAlt(_localctx, 1);
				{
				setState(101); functionDeclaration();
				}
				break;
			case Class:
				enterOuterAlt(_localctx, 2);
				{
				setState(102); classDeclaration();
				}
				break;
			case 4:
			case 6:
			case 10:
			case Assert:
			case Break:
			case Continue:
			case Export:
			case For:
			case If:
			case Import:
			case Let:
			case New:
			case Return:
			case Try:
			case Throw:
			case Var:
			case While:
			case PLUS:
			case MINUS:
			case BIT_NOT:
			case NOT:
			case IntLiteral:
			case FloatLiteral:
			case BooleanLiteral:
			case StringLiteral:
			case NullLiteral:
			case SymbolName:
				enterOuterAlt(_localctx, 3);
				{
				setState(103); statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public ArgumentsDeclarationContext argumentsDeclaration() {
			return getRuleContext(ArgumentsDeclarationContext.class,0);
		}
		public TerminalNode SymbolName() { return getToken(dshellParser.SymbolName, 0); }
		public TerminalNode Function() { return getToken(dshellParser.Function, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dshellVisitor ) return ((dshellVisitor<? extends T>)visitor).visitFunctionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(Function);
			setState(107); match(SymbolName);
			setState(108); match(10);
			setState(110);
			_la = _input.LA(1);
			if (_la==SymbolName) {
				{
				setState(109); argumentsDeclaration();
				}
			}

			setState(112); match(11);
			setState(113); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsDeclarationContext extends ParserRuleContext {
		public VariableDeclarationWithTypeContext variableDeclarationWithType(int i) {
			return getRuleContext(VariableDeclarationWithTypeContext.class,i);
		}
		public List<VariableDeclarationWithTypeContext> variableDeclarationWithType() {
			return getRuleContexts(VariableDeclarationWithTypeContext.class);
		}
		public ArgumentsDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentsDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dshellVisitor ) return ((dshellVisitor<? extends T>)visitor).visitArgumentsDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsDeclarationContext argumentsDeclaration() throws RecognitionException {
		ArgumentsDeclarationContext _localctx = new ArgumentsDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_argumentsDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); variableDeclarationWithType();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==13) {
				{
				{
				setState(116); match(13);
				setState(117); variableDeclarationWithType();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationWithTypeContext extends ParserRuleContext {
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public TerminalNode SymbolName() { return getToken(dshellParser.SymbolName, 0); }
		public VariableDeclarationWithTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarationWithType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dshellVisitor ) return ((dshellVisitor<? extends T>)visitor).visitVariableDeclarationWithType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationWithTypeContext variableDeclarationWithType() throws RecognitionException {
		VariableDeclarationWithTypeContext _localctx = new VariableDeclarationWithTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclarationWithType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); match(SymbolName);
			setState(124); match(3);
			setState(125); typeName(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeNameContext extends ParserRuleContext {
		public TypePool.Type type;
		public List<TypeNameContext> typeName() {
			return getRuleContexts(TypeNameContext.class);
		}
		public TerminalNode Void() { return getToken(dshellParser.Void, 0); }
		public TypeNameContext typeName(int i) {
			return getRuleContext(TypeNameContext.class,i);
		}
		public TerminalNode Float() { return getToken(dshellParser.Float, 0); }
		public TerminalNode ClassName() { return getToken(dshellParser.ClassName, 0); }
		public TerminalNode Int() { return getToken(dshellParser.Int, 0); }
		public TerminalNode Boolean() { return getToken(dshellParser.Boolean, 0); }
		public TypeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dshellVisitor ) return ((dshellVisitor<? extends T>)visitor).visitTypeName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeNameContext typeName() throws RecognitionException {
		return typeName(0);
	}
